--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     font-family: 'Tangerine', serif;
     font-size: 60px;
     text-shadow: 4px 4px 4px #aaa;
-  }
+}
 
-  .container {margin-top: 100px;}
+.container {
+    margin-top: 100px;
+}
